--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -16,7 +16,7 @@
   }
 </style>
 
-<table>
+<table id="info-systems-table">
   <thead>
     <tr>
       <th class="owner">Omanik</th>
@@ -25,6 +25,8 @@
       <th class="approved">Kinnitamise aeg</th>
       <th class="approve">Kinnita infosüsteem</th>
     </tr>
+  </thead>
+  <tbody>
     <tr class="template-row hidden">
       <td class="owner"></td>
       <td class="name"></td>
@@ -32,7 +34,5 @@
       <td class="approved"></td>
       <td class="approve"><button>Kinnita</button></td>
     </tr>
-  </thead>
-  <tbody>
   </tbody>
 </table>
