Add Bootstrap 4 script dependencies and use minified styles from CDN until we have a customised theme.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,11 @@
     <script src="/js/index.js"></script>
     <script src="/js/vendor/jquery-3.1.1.min.js"></script>
     <script src="/js/vendor/jquery.dataTables.min.js"></script>
+    <script src="/js/vendor/tether.min.js"></script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css" integrity="sha384-AysaV+vQoT3kOAXZkl02PThvDr8HYKPZhNT5h/CXfBThSRXQ6jW5DO2ekP5ViFdi" crossorigin="anonymous">
+
     <script>
       $(function() {
         var approver = new Approver();
