add basic styles for table

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -2,21 +2,9 @@
   .hidden {
     display: none;
   }
-
-  table {
-    width: 100%;
-  }
-
-  th, td {
-    text-align: left;
-  }
-
-  th.name {
-    width:30%;
-  }
 </style>
 
-<table id="info-systems-table">
+<table id="info-systems-table" class="table table-sm table-hover">
   <thead>
     <tr>
       <th class="owner">Omanik</th>
@@ -32,7 +20,7 @@
       <td class="name"></td>
       <td class="last-modified"></td>
       <td class="approved"></td>
-      <td class="approve"><button>Kinnita</button></td>
+      <td class="approve text-sm-right"><button class="btn btn-sm btn-outline-success">Kinnita</button></td>
     </tr>
   </tbody>
 </table>
