--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -4,7 +4,7 @@
   }
 </style>
 
-<table id="info-systems-table" class="table table-sm table-hover">
+<table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
   <thead>
     <tr>
       <th class="owner">Omanik</th>
