Use shorter column titles that don't wrap as much.

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -9,9 +9,9 @@
     <tr>
       <th class="owner">Omanik</th>
       <th class="name">Infosüsteemi nimi</th>
-      <th class="last-modified">Avaldamise aeg</th>
-      <th class="approved">Kinnitamise aeg</th>
-      <th class="approve">Kinnita infosüsteem</th>
+      <th class="last-modified">Avaldatud</th>
+      <th class="approved">Kinnitatud</th>
+      <th class="approve text-sm-right">Tegevused</th>
     </tr>
   </thead>
   <tbody>
