--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -18,8 +18,8 @@
     <tr class="template-row hidden">
       <td class="owner"></td>
       <td class="name"></td>
-      <td class="last-modified"></td>
-      <td class="approved"></td>
+      <td class="last-modified text-nowrap"></td>
+      <td class="approved text-nowrap"></td>
       <td class="approve text-sm-right"><button class="btn btn-sm btn-outline-success">Kinnita</button></td>
     </tr>
   </tbody>
