Adds a main navigation placeholder as static markup.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
     </script>
   </head>
   <body>
-    <h1>Infosüsteemide nimekiri</h1>
+    <#include 'header.html'/>
     <#include 'table.html'/>
   </body>
 </html>
