[#135240027] show infosystem status

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -4,7 +4,8 @@
       <tr>
         <th class="owner">Omanik</th>
         <th class="name">Infosüsteemi nimi</th>
-        <th class="last-modified">Avaldatud</th>
+        <th class="last-modified">Viimati muudetud</th>
+        <th class="status">Staatus</th>
         <th class="approved">Kinnitatud</th>
         <th class="approve text-sm-right">Tegevused</th>
       </tr>
@@ -14,6 +15,7 @@
         <td class="owner"></td>
         <td class="name"></td>
         <td class="last-modified text-nowrap"></td>
+        <td class="status"></td>
         <td class="approved text-nowrap"></td>
         <td class="approve text-sm-right"><button class="btn btn-sm btn-outline-success">Kinnita</button></td>
       </tr>
