--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid my-1">
   <table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
     <thead>
       <tr>
