--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -19,7 +19,7 @@
         <td class="status"></td>
         <td class="approved text-nowrap"></td>
         <td class="approval-status text-nowrap"></td>
-        <td class="approve text-sm-right">
+        <td class="approve text-nowrap text-sm-right">
           <button class="btn btn-sm btn-outline-success" data-status="KOOSKÕLASTATUD">Kooskõlasta</button>
           <button class="btn btn-sm btn-outline-danger" data-status="MITTE KOOSKÕLASTATUD">Ei kooskõlasta</button>
         </td>
