Use button value instead of data attribute

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -20,8 +20,8 @@
         <td class="approved text-nowrap"></td>
         <td class="approval-status text-nowrap"></td>
         <td class="approve text-nowrap text-sm-right">
-          <button class="btn btn-sm btn-outline-success" data-status="KOOSKÕLASTATUD">Kooskõlasta</button>
-          <button class="btn btn-sm btn-outline-danger" data-status="MITTE KOOSKÕLASTATUD">Ei kooskõlasta</button>
+          <button class="btn btn-sm btn-outline-success" value="KOOSKÕLASTATUD">Kooskõlasta</button>
+          <button class="btn btn-sm btn-outline-danger" value="MITTE KOOSKÕLASTATUD">Ei kooskõlasta</button>
         </td>
       </tr>
     </tbody>
