read infosystems url from config

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,8 +17,7 @@
     <script src="/js/vendor/bootstrap.min.js"></script>
     <script>
       $(function() {
-        var approver = new Approver();
-        approver.init();
+        new Approver('${infosystemsUrl}').init();
         moment.locale('et');
       });
     </script>
