--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,29 +1,31 @@
 <div class="container-fluid my-1">
-  <table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
-    <thead>
-      <tr>
-        <th class="owner">Omanik</th>
-        <th class="name">Infosüsteemi nimi</th>
-        <th class="last-modified">Viimati muudetud</th>
-        <th class="status">Staatus</th>
-        <th class="approved">Kooskõlastatud</th>
-        <th class="approval-status">Kooskõlastamise staatus</th>
-        <th class="approve text-sm-right">Tegevused</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="template-row hidden">
-        <td class="owner"></td>
-        <td class="name"></td>
-        <td class="last-modified text-nowrap"></td>
-        <td class="status"></td>
-        <td class="approved text-nowrap"></td>
-        <td class="approval-status text-nowrap"></td>
-        <td class="approve text-nowrap text-sm-right">
-          <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
-          <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <div class="table-responsive">
+    <table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
+      <thead>
+        <tr>
+          <th class="owner">Omanik</th>
+          <th class="name">Infosüsteemi nimi</th>
+          <th class="last-modified">Viimati muudetud</th>
+          <th class="status">Staatus</th>
+          <th class="approved">Kooskõlastatud</th>
+          <th class="approval-status">Kooskõlastamise staatus</th>
+          <th class="approve text-sm-right">Tegevused</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="template-row hidden">
+          <td class="owner"></td>
+          <td class="name"></td>
+          <td class="last-modified text-nowrap"></td>
+          <td class="status"></td>
+          <td class="approved text-nowrap"></td>
+          <td class="approval-status text-nowrap"></td>
+          <td class="approve text-nowrap text-sm-right">
+            <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
+            <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
