--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -13,18 +13,20 @@
         </tr>
       </thead>
       <tbody>
-        <tr class="template-row hidden">
-          <td class="owner"></td>
-          <td class="name"></td>
-          <td class="last-modified text-nowrap"></td>
-          <td class="status"></td>
-          <td class="approved text-nowrap"></td>
-          <td class="approval-status text-nowrap"></td>
-          <td class="approve text-nowrap text-sm-right">
-            <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
-            <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
-          </td>
-        </tr>
+        <script id="row-template" type="text/x-custom-template">
+          <tr>
+            <td class="owner"></td>
+            <td class="name"></td>
+            <td class="last-modified text-nowrap"></td>
+            <td class="status"></td>
+            <td class="approved text-nowrap"></td>
+            <td class="approval-status text-nowrap"></td>
+            <td class="approve text-nowrap text-sm-right">
+              <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
+              <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
+            </td>
+          </tr>
+        </script>
       </tbody>
     </table>
   </div>
