--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,12 @@
     <title>Kooskõlastaja</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/vendor/bootstrap-4.0.0-alpha.5.min.css">
     <link rel="stylesheet" href="/css/vendor/dataTables.bootstrap4.min.css">
     <script src="/js/vendor/jquery-3.1.1.min.js"></script>
+    <script src="/js/vendor/tether.min.js"></script>
+    <script src="/js/vendor/bootstrap.min.js"></script>
     <script src="/js/vendor/jquery.dataTables.min.js"></script>
     <script src="/js/vendor/jquery.dataTables.bootstrap4.min.js"></script>
     <script src="/js/Approver.js"></script>
