--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -22,6 +22,7 @@
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
             <td class="approve text-nowrap text-sm-right">
+              <button class="btn btn-sm btn-outline-info">Ava</button>
               <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
             </td>
@@ -29,5 +30,29 @@
         </script>
       </tbody>
     </table>
+  </div>
+</div>
+
+<div class="modal" id="detailsModal" tabindex="-1" role="dialog" aria-labelledby="detailsModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Sulge"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title"></h4>
+      </div>
+      <div class="modal-body">
+        <p>Lühinimi: <span class="short-name"></span></p>
+        <p>Omanik: <span class="owner"></span></p>
+        <p>Viimati muudetud: <span class="last-modified"></span></p>
+        <p>Staatus: <span class="status"></span></p>
+        <p>Kooskõlastatud: <span class="approved"></span></p>
+        <p>Kooskõlastamise staatus: <span class="approval-status"></span></p>
+        <p>Dokumentatsiooni URL: <a class="documentation" target="_blank"></a></p>
+        <p>Eesmärk: <div class="purpose"></div></p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Sulge</button>
+      </div>
+    </div>
   </div>
 </div>
