Added objective fields to Approver.js and table.html

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -10,6 +10,7 @@
           <th class="approved">Kooskõlastatud</th>
           <th class="approval-status">Kooskõlastamise staatus</th>
           <th class="approve text-sm-right">Tegevused</th>
+          <th class="objective">Eesmärk</th>
         </tr>
       </thead>
       <tbody>
@@ -24,6 +25,7 @@
             <td class="approve text-nowrap text-sm-right">
               <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
+			<td class="objective"></td>
             </td>
           </tr>
         </script>
