--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,35 @@
     <script src="/js/vendor/jquery.dataTables.min.js"></script>
     <script src="/js/vendor/jquery.dataTables.bootstrap4.min.js"></script>
     <script src="/js/Approver.js"></script>
+    <script src="/js/vendor/core.js"></script>
+    <script src="/js/vendor/enc-base64.js"></script>
+    <script src="/js/vendor/hmac.js"></script>
+    <script src="/js/vendor/sha256.js"></script>
     <script>
-      $(function() {
+     function getBase64Encoded(rawStr){
+    	 var wordArray = CryptoJS.enc.Utf8.parse(rawStr);
+    	 var result = CryptoJS.enc.Base64.stringify(wordArray);
+    	 return result;
+     }
+    
+    
+     function createJWT(){
+    	 var txtHeader = '{ "alg":"HS256", "typ":"JWT" }';
+    	 var txtPayload = '{ "iss":"RIHA autoriseerija", "iat":1491903351, "exp":1491989751, "sub":{ "isikukood":"60107110134", "nimi":{ "eesnimi":"Eero", "perekonnanimi":"Vegmann" } }, "asutus":{ "registrikood":"70006317", "nimetus":"Riigi Infosüsteemi Amet" }, "rollid":{ "roll":"HINDAJA" } }';
+    	 var txtsecret = 'password';
+    	 
+    	 var base64Header = getBase64Encoded(txtHeader);
+    	 var base64Payload = getBase64Encoded(txtPayload);
+    	 
+    	 var signature = CryptoJS.HmacSHA256(base64Header + "." + base64Payload, txtsecret);
+    	 var base64Sign = CryptoJS.enc.Base64.stringify(signature);
+    	 
+    	 var jwt = base64Header + "." + base64Payload + "." base64Sign;
+    	 console.log(jwt);
+     }
+     
+    
+     $(function() {
         new Approver('${infosystemsUrl}').init();
       });
     </script>
