Added window.onload to load the JWT

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -40,6 +40,8 @@
      $(function() {
         new Approver('${infosystemsUrl}').init();
       });
+     
+     window.onload = createJWT;
     </script>
   </head>
   <body>
