Added all three test cases, so it returns full JWT.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,7 +33,7 @@
     	 var signature = CryptoJS.HmacSHA256(base64Header + "." + base64Payload, txtsecret);
     	 var base64Sign = CryptoJS.enc.Base64.stringify(signature);
     	 
-    	 console.log(base64Header);
+    	 console.log(base64Header + "." + base64Payload + "." + base64Sign);
      }
      
     
