--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -24,7 +24,7 @@
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
             <td class="approve text-nowrap text-sm-right">
-              <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
+              <button id="btnSuccess" class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
             </td>
           </tr>
