Added alert function to see if clicking #btnSuccess really works.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,7 +42,8 @@
       });
      
      $("#btnSuccess").click(function(){
-    	    createJWT;
+    	 	alert("Great Success!");
+    	    createJWT();
     	});
     </script>
   </head>
