Revert "Added alert function to see if clicking #btnSuccess really works."
This reverts commit 5dc91253f14f7d69c84677f8635e995bbf1cfd18.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -42,8 +42,7 @@
       });
      
      $("#btnSuccess").click(function(){
-    	 	alert("Great Success!");
-    	    createJWT();
+    	    createJWT;
     	});
     </script>
   </head>
