Moved script tag below table.html include and added alert() function.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,7 +14,11 @@
     <script src="/js/vendor/enc-base64.js"></script>
     <script src="/js/vendor/hmac.js"></script>
     <script src="/js/vendor/sha256.js"></script>
-    <script type="text/javascript">
+  </head>
+  <body>
+    <#include 'table.html'/>
+    
+        <script type="text/javascript">
      function getBase64Encoded(rawStr){
     	 var wordArray = CryptoJS.enc.Utf8.parse(rawStr);
     	 var result = CryptoJS.enc.Base64.stringify(wordArray);
@@ -42,11 +46,9 @@
       });
      
      $("#btnSuccess").click(function(){
-    	    createJWT;
+    	 	alert("Great Success!");
+    	    createJWT();
     	});
     </script>
-  </head>
-  <body>
-    <#include 'table.html'/>
   </body>
 </html>
