Revert "Moved script tag below table.html include and added alert() function."
This reverts commit fabea84ef1fd2cbec966a7f704cfc839f1a152d1.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,11 +14,7 @@
     <script src="/js/vendor/enc-base64.js"></script>
     <script src="/js/vendor/hmac.js"></script>
     <script src="/js/vendor/sha256.js"></script>
-  </head>
-  <body>
-    <#include 'table.html'/>
-    
-        <script type="text/javascript">
+    <script type="text/javascript">
      function getBase64Encoded(rawStr){
     	 var wordArray = CryptoJS.enc.Utf8.parse(rawStr);
     	 var result = CryptoJS.enc.Base64.stringify(wordArray);
@@ -46,9 +42,11 @@
       });
      
      $("#btnSuccess").click(function(){
-    	 	alert("Great Success!");
-    	    createJWT();
+    	    createJWT;
     	});
     </script>
+  </head>
+  <body>
+    <#include 'table.html'/>
   </body>
 </html>
