--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -23,7 +23,8 @@
             <td class="status"></td>
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
-            <td class="approve text-nowrap text-sm-right">
+			<td class="approved text-nowrap"></td>
+            <td class="approver text-nowrap"></td>
               <button id="btnSuccess" class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
             </td>
