Revert "Added extra table row to show who approved the system."
This reverts commit 33058197f85db82bff9e249a81e54bec1371ce89.

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -23,8 +23,7 @@
             <td class="status"></td>
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
-			<td class="approved text-nowrap"></td>
-            <td class="approver text-nowrap"></td>
+            <td class="approve text-nowrap text-sm-right">
               <button id="btnSuccess" class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
             </td>
