--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -23,6 +23,10 @@
     </script>
   </head>
   <body>
+  <input type="text" id="first_name" placeholder="Eesnimi"/>
+  <input type="text" id="last_name" placeholder="Perekonnanimi"/>
+  <input type="text" id="register_code" placeholder="Registrikood"/>
+  <input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
     <#include 'table.html'/>
   </body>
 </html>
