--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -2,7 +2,7 @@
   <div class="table-responsive">
     <input type="text" id="first_name" placeholder="Eesnimi"/>
   	<input type="text" id="last_name" placeholder="Perekonnanimi"/>
-  	<input type="text" id="register_code" placeholder="Registrikood"/>
+  	<input type="number" id="register_code" placeholder="Registrikood"/>
  	<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
     <table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
       <thead>
