Re-factored some of ApprovalStorageService and added test modal window

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,5 +24,14 @@
   </head>
   <body>
     <#include 'table.html'/>
-  </body>
+
+	<div id="modal" class="modal">
+		<!-- Modal content -->
+		<div class="modal-content">
+			<span class="close">&times;</span>
+			<p>Some text in the Modal..</p>
+		</div>
+	</div>
+	
+</body>
 </html>
