--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -30,6 +30,7 @@
             <td class="approve text-nowrap text-sm-right">
               <button id="btnSuccess" class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
               <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
+			  <button id="btnApproval" class="btn btn-sm btn-outline-primary">Hinda</button>
             </td>
           </tr>
         </script>
