--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,8 @@
 		<!-- Modal content -->
 		<div class="modal-content">
 			<span class="close">&times;</span>
-			<p>Some text in the Modal..</p>
+			<p>Hinnangu pealkiri: </p> <input type="text" name="header" placeholder="Pealkiri">
+			<p>Hinnangu kommentaar: </p> <textarea rows="4" cols="50"></textarea>
 		</div>
 	</div>
 	
