--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,7 +30,10 @@
 		<div class="modal-content">
 			<span class="close">&times;</span>
 			<p>Hinnangu pealkiri: </p> <input type="text" name="header" placeholder="Pealkiri">
-			<p>Hinnangu kommentaar: </p> <textarea rows="4" cols="50"></textarea>
+			<p>Hinnangu kommentaar: </p> <textarea rows="4" cols="50" placeholder="Kommentaar"></textarea>
+			
+			<button id="btnSuccess" class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
+            <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
 		</div>
 	</div>
 	
