Reverted back to normal modal class

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,7 +25,7 @@
   <body>
     <#include 'table.html'/>
 
-	<div id="modal" class="modal fade">
+	<div id="modal" class="modal">
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
