--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,14 +29,20 @@
 		<div class="modal-content">
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">&times;</button>
-				<h4 class="modal-title">Infosüsteemi Hindamine</h4>
+				<h3 class="modal-title">Infosüsteemi Hindamine</h3>
 			</div>
 			<br>
 			<p>Hinnangu pealkiri:</p>
 			<input type="text" name="header" placeholder="Pealkiri">
+			<br>
 			<p>Hinnangu kommentaar:</p>
 			<textarea rows="4" cols="50" placeholder="Kommentaar"></textarea>
 			<br>
+			<input type="text" id="first_name" placeholder="Eesnimi"/>
+  			<input type="text" id="last_name" placeholder="Perekonnanimi"/>
+  			<input type="number" id="register_code" placeholder="Registrikood"/>
+ 			<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
+ 			<br>
 			<button id="btnSuccess" class="btn btn-sm btn-outline-success"
 				value="${approvedStatus}">Kooskõlasta</button>
 			<button class="btn btn-sm btn-outline-danger"
