--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -1,9 +1,5 @@
 <div class="container-fluid my-1">
   <div class="table-responsive">
-    <input type="text" id="first_name" placeholder="Eesnimi"/>
-  	<input type="text" id="last_name" placeholder="Perekonnanimi"/>
-  	<input type="number" id="register_code" placeholder="Registrikood"/>
- 	<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
     <table id="info-systems-table" class="table table-striped table-bordered dataTable" cellspacing="0" width="100%">
       <thead>
         <tr>
@@ -27,7 +23,7 @@
             <td class="status"></td>
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
-            <td class="approve text-nowrap text-sm-right">
+            <td class="approve text-nowrap text-sm-center">
 			  <button id="btnApproval" class="btn btn-sm btn-outline-primary">Hinda</button>
             </td>
           </tr>
