--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -17,6 +17,7 @@
     </script>
   </head>
   <body>
-    <#include 'table.html'/>
+  <#include 'logout.html'/>
+  <#include 'table.html'/>
   </body>
 </html>
