--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,9 +46,9 @@
  			<br>
  			<br>
 			<button id="btnSuccess" class="btn btn-sm btn-outline-success"
-				value="${approvedStatus}">Kooskõlasta</button>
+				value="${approvedStatus}" onclick="approval(this)">Kooskõlasta</button>
 			<button class="btn btn-sm btn-outline-danger"
-				value="${notApprovedStatus}">Ei kooskõlasta</button>
+				value="${notApprovedStatus}" onclick="approval(this)">Ei kooskõlasta</button>
 		</div>
 	</div>
 
