Added ID to both approval buttons and made function calling id based

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
  			<br>
 			<button id="btnSuccess" class="btn btn-sm btn-outline-success"
 				value="${approvedStatus}" onclick="approval(this)">Kooskõlasta</button>
-			<button class="btn btn-sm btn-outline-danger"
+			<button id="btnNotApproved" class="btn btn-sm btn-outline-danger"
 				value="${notApprovedStatus}" onclick="approval(this)">Ei kooskõlasta</button>
 		</div>
 	</div>
