--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,7 +47,7 @@
  			<br>
 			<button id="btnSuccess" class="btn btn-sm btn-outline-success"
 				value="${approvedStatus}">Kooskõlasta</button>
-			<button id="btnNotApproved" class="btn btn-sm btn-outline-danger"
+			<button id="btnDisapprove" class="btn btn-sm btn-outline-danger"
 				value="${notApprovedStatus}">Ei kooskõlasta</button>
 		</div>
 	</div>
