--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -28,7 +28,7 @@
 	<div id="modal" class="modal">
 		<div class="modal-content">
 			<div class="modal-header">
-				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<button type="button" id="close"class="close" data-dismiss="modal">&times;</button>
 				<h3 class="modal-title">Infosüsteemi Hindamine</h3>
 			</div>
 			<br>
