Added another check case for allowing an approval to be made

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,14 +33,15 @@
 			</div>
 			<br>
 			<p>Hinnangu pealkiri:</p>
-			<input type="text" name="header" placeholder="Pealkiri">
+			<input id="header" type="text" name="header" placeholder="Pealkiri">
 			<br>
 			<br>
 			<p>Hinnangu kommentaar:</p>
-			<textarea rows="4" cols="50" placeholder="Kommentaar"></textarea>
+			<textarea id="comment" rows="4" cols="50" placeholder="Kommentaar"></textarea>
 			<br>
 			<input type="text" id="first_name" placeholder="Eesnimi"/>
   			<input type="text" id="last_name" placeholder="Perekonnanimi"/>
+  			<br>
   			<input type="number" id="register_code" placeholder="Registrikood"/>
  			<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
  			<br>
