Added tableheader to match new table row

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -10,6 +10,7 @@
           <th class="status">Staatus</th>
           <th class="approved">Kooskõlastatud</th>
           <th class="approval-status">Kooskõlastamise staatus</th>
+          <th class="approval-comment">Kooskõlastamise kommentaar</th>
           <th class="approve text-sm-right">Tegevused</th>
         </tr>
       </thead>
