Removed "text-nowrap" from approval-comment td

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -24,7 +24,7 @@
             <td class="status"></td>
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
-			<td class="approval-comment text-nowrap"></td>
+			<td class="approval-comment"></td>
             <td class="approve text-nowrap text-sm-center">
 			  <button id="btnApproval" class="btn btn-sm btn-outline-primary">Hinda</button>
             </td>
