Removed binary approval buttons and replaced them with single button.
Now there is only 1 button, since approval is given by title and
comment, not which button gets clicked.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,10 +46,7 @@
  			<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
  			<br>
  			<br>
-			<button id="btnSuccess" class="btn btn-sm btn-outline-success"
-				value="${approvedStatus}">Kooskõlasta</button>
-			<button id="btnDisapprove" class="btn btn-sm btn-outline-danger"
-				value="${notApprovedStatus}">Ei kooskõlasta</button>
+			<button id="btnApprove" class="btn btn-sm btn-outline-primary">Hinda</button>
 		</div>
 	</div>
 
