Added redirect method and change name of log button

--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -27,7 +27,7 @@
 			<td class="approval-comment"></td>
             <td class="approve text-nowrap text-sm-center">
 			  <button id="btnApproval" class="btn btn-sm btn-outline-primary">Hinda</button>
-				<button id="btnApprovalLog" class="btn btn-sm btn-outline-info">Hinda</button>
+			  <button id="btnApprovalLog" class="btn btn-sm btn-outline-info">Logi</button>
             </td>
           </tr>
         </script>
