Added footer to modal window

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -45,8 +45,8 @@
   				<br>
   				<input type="number" id="register_code" placeholder="Registrikood"/>
  				<input type="text" id="institution_name" placeholder="Ettevõtte nimetus"/>
- 				<br>
- 				<br>
+			</div>
+			<div class="modal-footer">
 				<button id="btnApprove" class="btn btn-sm btn-outline-primary">Hinda</button>
 			</div>
 		</div>
