--- a/src/main/resources/templates/table.html
+++ b/src/main/resources/templates/table.html
@@ -5,10 +5,12 @@
         <tr>
           <th class="owner">Omanik</th>
           <th class="name">Infosüsteemi nimi</th>
+          <th class="objective">Eesmärk</th>
           <th class="last-modified">Viimati muudetud</th>
           <th class="status">Staatus</th>
           <th class="approved">Kooskõlastatud</th>
           <th class="approval-status">Kooskõlastamise staatus</th>
+          <th class="approval-comment">Kooskõlastamise kommentaar</th>
           <th class="approve text-sm-right">Tegevused</th>
         </tr>
       </thead>
@@ -17,13 +19,15 @@
           <tr>
             <td class="owner"></td>
             <td class="name"></td>
+			<td class="objective"></td>
             <td class="last-modified text-nowrap"></td>
             <td class="status"></td>
             <td class="approved text-nowrap"></td>
             <td class="approval-status text-nowrap"></td>
-            <td class="approve text-nowrap text-sm-right">
-              <button class="btn btn-sm btn-outline-success" value="${approvedStatus}">Kooskõlasta</button>
-              <button class="btn btn-sm btn-outline-danger" value="${notApprovedStatus}">Ei kooskõlasta</button>
+			<td class="approval-comment"></td>
+            <td class="approve text-nowrap text-sm-center">
+			  <button id="btnApproval" class="btn btn-sm btn-outline-primary">Hinda</button>
+			  <button id="btnApprovalLog" class="btn btn-sm btn-outline-info">Logi</button>
             </td>
           </tr>
         </script>
